# Chorus

./: .env.example  .gitignore  LICENSE.md  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.docker.md  docker-compose.yml  pyproject.toml
backend/scripts/: pull-images.sh  test_parallel_swarm.py
backend/src/: main.py  worker.py
backend/src/blackboard/: database.py  event_log.py  redis_blackboard.py
backend/src/llm/: minimax.py
backend/src/rag/: pipeline.py
backend/src/storage/: __init__.py  minio_client.py
backend/src/swarm/: agents.py  claim_store.py  claim_validators.py  claims.py  context_engineering.py  state.py
backend/src/swarm/tools/: __init__.py  claim_tools.py  contract_verify.py  coordination.py  fetch_url.py  sandbox.py  todo_tools.py  user_directive.py  user_interaction.py  web_search.py  workspace_tools.py
backend/tests/: test_agent_claim_wiring.py  test_agents_claim_repair.py  test_claim_store.py  test_claim_tools.py  test_claim_validators.py  test_claims.py  test_context_engineering.py  test_leadership_phase1.py  test_leadership_phase2.py  test_leadership_phase3.py  test_leadership_phase5.py  test_plan_mode_integration.py  test_plan_runtime_flow.py  test_project_delete.py  test_swarm_coordination.py
design-reference/: app.html  index.html  login.html  pricing.html  register.html  settings.html
docs/: IMPLEMENTATION_PLAN.md  SPEC.md  SWARM_CLAIM_PROTOCOL_PLAN.md  SWARM_LEADERSHIP_PLAN.md
frontend/: components.json  package.json  pnpm-lock.yaml
frontend/src/: app.css
frontend/static/: shared.css
(+57 files in other folders)
