[project]
name = "chorus-backend"
version = "0.1.0"
description = "Chorus Agent Swarm Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.2.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.2.70",
    "langgraph-sdk>=0.1.0",
    "langgraph-swarm>=0.1.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "psycopg>=3.1.0",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "numpy>=1.26.0",
    "tenacity>=8.2.0",
    "minio>=7.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
